* impoart bs/media to * fix height of collapsed headers * cut previews to one line

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -311,6 +311,16 @@ td.keys {
   }
 }
 
+.card-comment{
+  .card-header{
+    min-height: 4.2rem;
+  }
+  .preview{
+    height: 1.5rem;
+    overflow:hidden;
+  }
+}
+
 .octicon {
   vertical-align: text-bottom;
 }
